# C1GamesStarterKit

./: .gitattributes  .gitignore  License.md  README.md  REWARD_FUNCTION.md  analyze_results.py  behavioral_analysis_table.md  game-configs.json  json-docs.html  plot_results.py  requirements.txt  run_experiments.sh  run_game.sh  run_sweep.py  sweep_results.csv  sweep_summary.csv
community/c++-algo/: .gitignore  CMakeLists.txt  README.md
community/c++-algo/algo-target/: run.ps1  run.sh
community/c++-algo/documentation/: _r_e_a_d_m_e_8md.html  algo_core_8cpp.html  algo_core_8h.html  algo_core_8h_source.html  algo_strategy_8cpp.html  algo_strategy_8h.html  algo_strategy_8h_source.html  annotated.html  classes.html  classterminal_1_1_algo_core-members.html  classterminal_1_1_algo_core.html  classterminal_1_1_algo_strategy-members.html  classterminal_1_1_algo_strategy.html  classterminal_1_1_custom_exception-members.html  classterminal_1_1_custom_exception.html  classterminal_1_1_game_map-members.html  classterminal_1_1_game_map.html  classterminal_1_1_game_map_exception-members.html  classterminal_1_1_game_map_exception.html  classterminal_1_1_game_state-members.html  classterminal_1_1_game_state.html  classterminal_1_1_game_unit-members.html  classterminal_1_1_game_unit.html  classterminal_1_1_player_index_exception-members.html  classterminal_1_1_player_index_exception.html  classterminal_1_1_pos_exception-members.html  classterminal_1_1_pos_exception.html  classterminal_1_1_shortest_path_finder-members.html  classterminal_1_1_shortest_path_finder.html  classterminal_1_1_unit_remove_exception-members.html  classterminal_1_1_unit_remove_exception.html  classterminal_1_1_unit_spawn_exception-members.html  classterminal_1_1_unit_spawn_exception.html  classterminal_1_1_unit_type_exception-members.html  classterminal_1_1_unit_type_exception.html  classterminal_1_1_util-members.html  classterminal_1_1_util.html  classterminal_1_1_util_exception-members.html  classterminal_1_1_util_exception.html  custom_exceptions_8h.html  (+53 more)
community/c++-algo/documentation/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  (+48 more)
community/c++-algo/src/: StarterAlgo.cpp  algoStrategy.cpp  algoStrategy.h  source.cpp
(+346 files in other folders)
